# CFD-Model

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
components/: __init__.py  coordinate_geo.py  core.py  diffusion_isotropic.py  error_ar1.py  factory.py  ocean_mask_bathy.py  parallel_process.py  plotting.py  velocity_cmems.py
config/: default.yaml  smoke.yaml
scripts/: run.py
